feat(): add parallax effect

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -16,6 +16,7 @@
 @import 'modules/intermediate';
 @import 'modules/push';
 @import 'modules/lazyload';
+@import 'modules/parallax';
 @import 'modules/shadow';
 @import 'modules/slide';
 @import 'modules/symbol';
