--- a/assets/styles/tools/variables.scss
+++ b/assets/styles/tools/variables.scss
@@ -1,7 +1,7 @@
 // Colors
 $black:  #141414;
-$darker: #2B2B2B;
-$dark:   #434343;
+$darker: #454545;
+$dark:   #636363;
 $grey:   #D9D9D9;
 $white:  #FFFFFF;
 $green:  #00D6CF;
