fix(performance): use video instead of gif

--- a/assets/styles/modules/content.scss
+++ b/assets/styles/modules/content.scss
@@ -695,7 +695,8 @@
   &-sub,
   &-poster,
   &-listed {
-    > img {
+    > img,
+    > video {
       align-self: center;
       width: 100%;
       height: auto;
