refactor(): use data instead of class

--- a/assets/styles/layouts/page.scss
+++ b/assets/styles/layouts/page.scss
@@ -1,6 +1,6 @@
 .Page {
   @each $key, $value in $colors {
-    &--#{$key} {
+    &[data-color="#{$key}"] {
       *::selection {
         color: $white;
         background-color: $value;
