fix(fonts): add webfonts

--- a/assets/styles/bases/general.scss
+++ b/assets/styles/bases/general.scss
@@ -8,6 +8,7 @@ body {
   @include full-size();
   position: relative;
   font-family: $font;
+  font-display: block;
   color: $white;
   overflow: hidden;
 
