--- a/assets/styles/tools/fonts.scss
+++ b/assets/styles/tools/fonts.scss
@@ -1,19 +1,19 @@
 @font-face {
   font-family: 'Euclid Flex';
   font-weight: normal;
-  src: url('~static/fonts/Euclid-Flex-Regular.otf');
+  src: url('~static/fonts/EuclidFlex-Regular.ttf');
 }
 
 @font-face {
   font-family: 'Euclid Flex';
   font-weight: 700;
-  src: url('~static/fonts/Euclid-Flex-Bold.otf');
+  src: url('~static/fonts/EuclidFlex-Bold.ttf');
 }
 
 @font-face {
   font-family: 'Euclid Flex';
   font-weight: 300;
-  src: url('~static/fonts/Euclid-Flex-Light.otf');
+  src: url('~static/fonts/EuclidFlex-Light.ttf');
 }
 
 @font-face {
